fix(theme): align login button text

--- a/feeds/luci-lorawan-gateway/luci-theme-sensecap/less/sysauth.less
+++ b/feeds/luci-lorawan-gateway/luci-theme-sensecap/less/sysauth.less
@@ -205,14 +205,17 @@
             // Submit button
             .cbi-button-apply {
                 width: 100% !important;
-                min-height: 50px;
+                height: 50px;
                 margin: 30px 0 100px;
-                padding: 10px 0;
+                padding: 0;
                 font-size: 15px;
                 font-weight: 600;
+                line-height: 50px;
                 color: var(--white);
                 text-align: center;
-                letter-spacing: 0.8rem;
+                letter-spacing: normal !important;
+                word-spacing: normal !important;
+                text-indent: 0 !important;
                 background-color: var(--primary) !important;
                 border: none;
                 border-radius: 6px;
